3-kubernetes/manifests/smartcow-ingress-user.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartcow
  namespace : smartcow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: smartcow-stats.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smartcow-ui-service
                port:
                  number: 8080
